<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search_btn_text">Поиск</string>
    <string name="library_btn_text">Медиатека</string>
    <string name="settings_btn_text">Настройки</string>
    <string name="dark_theme_tv_text">Тёмная тема</string>
    <string name="share_app_tv_text">Поделиться приложением</string>
    <string name="support_tv_text">Написать в поддержку</string>
    <string name="terms_of_use_tv_text">Пользовательское соглашение</string>
    <string name="hint_search">Поиск</string>
    <string name="share_app_url">"https://practicum.yandex.ru/android-developer/"</string>
    <string name="support_email">"global8iwr@gmail.com"</string>
    <string name="mail_subject">"Сообщение разработчикам и разработчицам приложения Playlist Maker"</string>
    <string name="mail_text">"Спасибо разработчикам и разработчицам за крутое приложение!"</string>
    <string name="terms_of_use_url">"https://yandex.ru/legal/practicum_offer/"</string>
    <string name="settings_screen_toolbar_title">Настройки</string>
    <string name="search_screen_toolbar_title">Поиск</string>
    <string name="library_screen_toolbar_title">Медиатека</string>
    <string name="artist_name_and_track_time">%s • %s</string>
    <string name="text_nothing_found">Ничего не нашлось</string>
    <string name="connection_error_message">Проблемы со связью</string>
    <string name="connection_error_additional_message">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update_btn_text">Обновить</string>
    <string name="search_history_title">Вы искали</string>
    <string name="clear_history_btn_text">Очистить историю</string>
    <string name="duration_text">Длительность</string>
    <string name="album_text">Альбом</string>
    <string name="release_date_text">Год</string>
    <string name="genre_text">Жанр</string>
    <string name="country_text">Страна</string>
</resources>
