<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/other_screens_background_color">

    <com.google.android.material.appbar.AppBarLayout style="@style/AppBarLayout">

        <com.google.android.material.appbar.MaterialToolbar
            style="@style/Toolbar"
            app:title="@string/settings_screen_toolbar_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="18dp">

        <FrameLayout style="@style/SettingsScreenOptionsFrameLayout">

            <TextView
                style="@style/SettingsScreenOptionsTextView"
                android:text="@string/dark_theme_tv_text" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="wrap_content"
                android:layout_height="@dimen/settings_options_icon_size"
                android:layout_gravity="end"
                tools:checked="true" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/flShareApp"
            style="@style/SettingsScreenOptionsFrameLayout">

            <TextView
                style="@style/SettingsScreenOptionsTextView"
                android:text="@string/share_app_tv_text" />

            <ImageView
                style="@style/SettingsScreenOptionsImageView"
                android:src="@drawable/ic_share" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/flWriteToSupport"
            style="@style/SettingsScreenOptionsFrameLayout">

            <TextView
                style="@style/SettingsScreenOptionsTextView"
                android:text="@string/support_tv_text" />

            <ImageView
                style="@style/SettingsScreenOptionsImageView"
                android:src="@drawable/ic_support" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/flTermsOfUse"
            style="@style/SettingsScreenOptionsFrameLayout">

            <TextView
                style="@style/SettingsScreenOptionsTextView"
                android:text="@string/terms_of_use_tv_text" />

            <ImageView
                style="@style/SettingsScreenOptionsImageView"
                android:src="@drawable/ic_terms_of_use" />

        </FrameLayout>

    </LinearLayout>

</FrameLayout>