<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nsvPlaceholder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/llPlaceHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/search_screen_placeholder_margin_top"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/ivPlaceholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:src="@drawable/ic_nothing_found_placeholder" />

        <TextView
            android:id="@+id/tvPlaceholderMessage"
            style="@style/SearchScreenPlaceholderText"
            android:visibility="gone"
            tools:text="@string/text_nothing_found" />

        <TextView
            android:id="@+id/tvPlaceholderAdditionalMessage"
            style="@style/SearchScreenPlaceholderText"
            android:visibility="gone"
            tools:text="@string/connection_error_message" />

        <Button
            android:id="@+id/btnPlaceholderUpdate"
            style="@style/SearchScreenButton"
            android:text="@string/update_btn_text"
            android:visibility="gone" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>