<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_screen_background"
    android:orientation="vertical"
    android:paddingStart="17dp"
    android:paddingTop="40dp"
    android:paddingEnd="15dp"
    android:paddingBottom="28dp">

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/margin_between_btn"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/search_btn_text"
        android:textAllCaps="false"
        android:textColor="@color/nav_btn_text_color"
        android:textSize="@dimen/nav_btn_text_size"
        app:cornerRadius="@dimen/nav_btn_corner_radius"
        app:icon="@drawable/ic_search"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconTint="@color/nav_btn_icon_color" />

    <Button
        android:id="@+id/btnLibrary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/margin_between_btn"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/library_btn_text"
        android:textAllCaps="false"
        android:textColor="@color/nav_btn_text_color"
        android:textSize="@dimen/nav_btn_text_size"
        app:cornerRadius="@dimen/nav_btn_corner_radius"
        app:icon="@drawable/ic_library"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconTint="@color/nav_btn_icon_color" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/settings_btn_text"
        android:textAllCaps="false"
        android:textColor="@color/nav_btn_text_color"
        android:textSize="@dimen/nav_btn_text_size"
        app:cornerRadius="@dimen/nav_btn_corner_radius"
        app:icon="@drawable/ic_settings"
        app:iconGravity="textStart"
        app:iconPadding="10dp"
        app:iconTint="@color/nav_btn_icon_color" />

</LinearLayout>